fixed tech stack content on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,9 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-$darkText: #272A2C;
-$medText: #7F8A8F;
-$primary: #109A81;
+$darkText: #272a2c;
+$medText: #7f8a8f;
+$primary: #109a81;
 // $secondary:
-
 
 .App {
   font-family: 'Inter', sans-serif;
@@ -20,7 +18,6 @@ $primary: #109A81;
   padding-right: 80px;
   right: 0px;
   display: flex;
-
 }
 .main-nav {
   display: flex;
@@ -29,7 +26,7 @@ $primary: #109A81;
   @media (max-width: 800px) {
     display: none;
     &.menu-open {
-      box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.03);
+      box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.03);
       position: fixed;
       display: flex;
       top: 0;
@@ -84,6 +81,7 @@ $primary: #109A81;
   border: 0;
   background: transparent;
   @media (min-width: 800px) {
+    position: absolute;
     display: none;
   }
   svg {
@@ -91,7 +89,6 @@ $primary: #109A81;
     height: 44px;
   }
 }
-
 
 .homepage {
   height: 100vh;
@@ -199,14 +196,14 @@ $primary: #109A81;
 }
 
 .card {
-  box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.06);
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.06);
   border-radius: 12px;
   overflow: hidden;
 }
 .card-content {
   padding: 30px;
   backdrop-filter: blur(10px);
-  background: rgba(255,255,255,0.2);
+  background: rgba(255, 255, 255, 0.2);
   color: $medText;
   font-weight: 300;
 }
@@ -228,7 +225,6 @@ $primary: #109A81;
   display: inline-flex;
   align-items: center;
 
-
   svg {
     padding-right: 5px;
   }
@@ -242,6 +238,11 @@ $primary: #109A81;
   position: relative;
   overflow: hidden;
   max-width: 100vw;
+  @media (max-width: 880px) {
+    height: 100%;
+    padding: 50px;
+    margin-top: 250px;
+  }
 }
 
 .stack-background {
@@ -264,12 +265,11 @@ $primary: #109A81;
   left: -44px;
 }
 
-
 .stack-info {
   width: 100%;
   max-width: 820px;
   position: relative;
-  @media ( max-width: 880px ) {
+  @media (max-width: 880px) {
     padding: 50px;
     margin-top: 250px;
   }
@@ -290,7 +290,7 @@ $primary: #109A81;
 
 .stack-lists {
   display: flex;
-  @media ( max-width: 880px ) {
+  @media (max-width: 880px) {
     flex-direction: column;
   }
   justify-content: space-between;
@@ -334,7 +334,7 @@ $primary: #109A81;
   width: 100%;
   max-width: 820px;
   position: relative;
-  @media ( max-width: 880px ) {
+  @media (max-width: 880px) {
     padding: 50px;
     margin-top: 250px;
   }
@@ -394,7 +394,7 @@ $primary: #109A81;
   width: 100%;
   max-width: 820px;
   position: relative;
-  @media ( max-width: 880px ) {
+  @media (max-width: 880px) {
     padding: 50px;
     margin-top: 250px;
   }
@@ -429,8 +429,6 @@ $primary: #109A81;
   }
 }
 
-
-
 // animation stuff
 .fade-enter {
   opacity: 0;
@@ -445,5 +443,4 @@ $primary: #109A81;
 
 section {
   transition: opacity 250ms ease-in;
-
 }
